fix: scroll bar UI
- Hidden scrollbar and cross browsing

--- a/src/styles/components/reservationCard/index.css
+++ b/src/styles/components/reservationCard/index.css
@@ -5,12 +5,14 @@
   height: 80%;
   overflow-y: scroll;
   overflow-x: hidden;
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow: -moz-scrollbars-none;
 }
 
 .cards-wrapper::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none;
+  width: 0 !important;
 }
 
 .container {
